fixed gap

--- a/src/assets/styles/scss/header.scss
+++ b/src/assets/styles/scss/header.scss
@@ -148,7 +148,7 @@ body {
     .mobile-menu-styles {
         text-align: center;
         background-color: lightgrey;
-        height: 18.2vh;
+        height: 18.24vh;
         border-bottom: 1px solid darkgrey;
     }
     .each-menu-item {
